<resources>
    <string name="app_name">My Bank system</string>
    <string name="title_activity_all_users">All_users</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="date">date</string>
    <string name="name2">name2</string>
    <string name="name1">name1</string>
    <string name="rs1">Rs.</string>
    <string name="amount">amount</string>
    <string name="slash1">/-</string>
    <string name="transaction_status">Transaction status</string>
    <string name="todo1">TODO</string>
    <string name="no_history">No history</string>
    <string name="phone_numebr">Phone numebr</string>
    <string name="rs">Rs.</string>
    <string name="slash">/-</string>
    <string name="balance">balance</string>
    <string name="banking_system_application">Banking System Application</string>
    <string name="select_a_user_to_transfer_money">Select a user to transfer money</string>
    <string name="current_balance">Current balance :</string>

    <string name="todo">TODO</string>
    <string name="view_users">View Users</string>
    <string name="developed_by">Developed by-</string>
    <string name="vanieka"> Vanieka</string>
    <string name="banking_system">BANKING SYSTEM</string>
    <string name="search">Search</string>

</resources>