<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/banking_system_application"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="504dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/bank" />

    <Button
        android:id="@+id/btnViewUsers"
        android:layout_width="149dp"
        android:layout_height="58dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#009688"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:text="@string/view_users"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>